syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeyManagerGrpc";
package br.com.zup.edu;

service CriaNovaChavePixService {
  rpc cria(NovaChavePixRequest) returns (NovaChavePixResponse) {}
}

message NovaChavePixRequest {
  string clientID         = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;
}

enum TipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

enum TipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

message NovaChavePixResponse {
  string clientId = 1;
  string pixId = 2;
}